Fix footer-content alignment

--- a/src/components/Layout/ImageFooter/Content/Content.css
+++ b/src/components/Layout/ImageFooter/Content/Content.css
@@ -1,6 +1,7 @@
 .footer-content {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding: 16rem 0;
 }
 
